Enhance styles for hero section and buttons
Added styles for hero section, buttons, and badges.

--- a/index.html
+++ b/index.html
@@ -104,3 +104,420 @@
       gap: 3rem;
       align-items: center;
     }
+    .eyebrow {
+      text-transform: uppercase;
+      letter-spacing: 0.2em;
+      font-size: 0.72rem;
+      color: var(--primary-soft);
+      margin-bottom: 0.6rem;
+      font-weight: 600;
+    }
+
+    .hero-title {
+      font-size: 2.6rem;
+      line-height: 1.1;
+      margin-bottom: 0.7rem;
+      color: #f9fafb;
+    }
+
+    .hero-subtitle {
+      font-size: 1.1rem;
+      color: var(--muted);
+      max-width: 34rem;
+      margin-bottom: 1.3rem;
+    }
+
+    .hero-main p {
+      font-size: 0.98rem;
+      color: #e5e7eb;
+      margin-bottom: 1.25rem;
+      max-width: 37rem;
+    }
+
+    .hero-badges {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 0.5rem;
+      margin-bottom: 1.3rem;
+    }
+
+    .badge {
+      font-size: 0.78rem;
+      border-radius: 999px;
+      padding: 0.28rem 0.7rem;
+      border: 1px solid rgba(156, 163, 175, 0.9);
+      color: #e5e7eb;
+      background: rgba(15, 23, 42, 0.8);
+    }
+
+    .buttons {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 0.75rem;
+      margin-bottom: 1.2rem;
+    }
+
+    .btn {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      padding: 0.7rem 1.4rem;
+      border-radius: 999px;
+      font-size: 0.92rem;
+      font-weight: 700;
+      text-transform: uppercase;
+      letter-spacing: 0.12em;
+      cursor: pointer;
+      border: none;
+      transition: transform 0.08s ease, box-shadow 0.08s ease, background 0.12s ease, color 0.12s ease, border-color 0.12s ease;
+      white-space: nowrap;
+    }
+
+    .btn-primary {
+      background: linear-gradient(135deg, #f97316, #f59e0b);
+      color: #111827;
+      box-shadow: 0 10px 28px rgba(249, 115, 22, 0.45);
+    }
+
+    .btn-primar
+  </style>
+</head>
+
+<body>
+<header>
+  <div class="container nav">
+    <div class="logo">
+      YOURWAY <span>COACHING</span>
+    </div>
+    <nav class="nav-links">
+      <a href="#programs">Programs</a>
+      <a href="#who">Who It’s For</a>
+      <a href="#faq">FAQ</a>
+      <a href="#apply">Apply</a>
+    </nav>
+  </div>
+</header>
+
+<main>
+  <!-- HERO -->
+  <section class="hero">
+    <div class="container hero-inner">
+      <div class="hero-main">
+        <p class="eyebrow">Real estate coaching for operators, not spectators</p>
+
+        <h1 class="hero-title">Build a real estate business that prints confidence and cash flow.</h1>
+
+        <p class="hero-subtitle">
+          Coaching for property managers, investors, flippers & agents who want more doors, more deals, and fewer excuses.
+        </p>
+
+        <p>
+          I’ve spent years in the middle of the mess: tenants, owners, contractors, collections, clogged toilets,
+          blown budgets, and deals that almost died three times. Coaching is where we strip out the chaos, build
+          simple systems, and get you back to running a business instead of the business running you.
+        </p>
+
+        <div class="hero-badges">
+          <span class="badge">Built from real PM, flipping & investing experience</span>
+          <span class="badge">No fluff, just what actually works</span>
+          <span class="badge">Blunt feedback, clear next steps</span>
+        </div>
+
+        <div class="buttons">
+          <a href="#apply" class="btn btn-primary">Apply for Coaching <span>→</span></a>
+          <a href="#programs" class="btn btn-outline">View Programs <span>↓</span></a>
+        </div>
+
+        <div class="hero-metrics">
+          <div>
+            <div class="metric-label">Doors & Deals</div>
+            <div class="metric-value">Thousands+</div>
+            <div class="metric-sub">Real units and real problems solved over decades.</div>
+          </div>
+          <div>
+            <div class="metric-label">Flips & rehabs</div>
+            <div class="metric-value">2,000–3,000+</div>
+            <div class="metric-sub">Full-scale turnarounds, not just lipstick on a listing.</div>
+          </div>
+          <div>
+            <div class="metric-label">Years in the game</div>
+            <div class="metric-value">30+ years</div>
+            <div class="metric-sub">Rochester & Upstate NY real estate trenches.</div>
+          </div>
+        </div>
+      </div>
+
+      <!-- HERO SIDEBAR CARD -->
+      <aside class="hero-card">
+        <h3>What we work on together</h3>
+        <ul>
+          <li>Turn random chaos into a simple set of repeatable systems.</li>
+          <li>Clean up leads, leasing, maintenance, collections & flips.</li>
+          <li>Decide what to automate, delegate, or delete completely.</li>
+          <li>Build a weekly rhythm so the business stops hijacking your life.</li>
+        </ul>
+
+        <p class="hero-note">
+          30 years. 2,000–3,000 flips, rehabs, and full-scale turnarounds.
+          I know exactly what kills profit and what prints it.
+        </p>
+
+        <div class="hero-avatar">
+          <img src="sean-dapper.png" alt="Sean, YourWay real estate coach" class="hero-avatar-img" />
+          <div class="hero-avatar-text">
+            <span>YourWay Coaching</span>
+            Property manager, investor, flipper & operator in the Rochester market.
+          </div>
+        </div>
+      </aside>
+    </div>
+  </section>
+
+  <!-- BY THE NUMBERS -->
+  <section class="numbers">
+    <div class="container numbers-inner">
+      <div class="numbers-item">
+        <div class="numbers-value">Thousands+</div>
+        <div class="numbers-label">Units managed / overseen</div>
+        <div class="numbers-sub">Real doors, real people, real problems solved.</div>
+      </div>
+      <div class="numbers-item">
+        <div class="numbers-value">Thousands+</div>
+        <div class="numbers-label">Leases & renewals</div>
+        <div class="numbers-sub">From “no systems” to predictable processes.</div>
+      </div>
+      <div class="numbers-item">
+        <div class="numbers-value">2,000–3,000+</div>
+        <div class="numbers-label">Flips & rehabs involved</div>
+        <div class="numbers-sub">Projects, turns and full-scale renovations.</div>
+      </div>
+      <div class="numbers-item">
+        <div class="numbers-value">$100M+</div>
+        <div class="numbers-label">Property value touched</div>
+        <div class="numbers-sub">Management, deals, and real equity at stake.</div>
+      </div>
+    </div>
+  </section>
+
+  <!-- PROGRAMS -->
+  <section id="programs">
+    <div class="container">
+      <h2 class="section-title">Four coaching tracks. One goal: a business that actually works.</h2>
+      <p class="section-subtitle">
+        Choose the lane that matches how you make your money. Every track is 1:1, practical, and built around
+        your market, your numbers, and your actual constraints.
+      </p>
+
+      <div class="grid-3">
+        <!-- Agent coaching -->
+        <div class="card">
+          <div class="card-label">For licensed agents</div>
+          <span class="card-tagline">Most popular</span>
+          <h3>Real Estate Agent Coaching</h3>
+          <p>
+            For agents who are tired of guessing where the next deal comes from and ready to build a real pipeline,
+            not just chase random leads.
+          </p>
+          <p class="price">From $497 / month · 1:1 coaching</p>
+          <ul class="benefits">
+            <li>Build a simple, repeatable listing & buyer system.</li>
+            <li>Turn your market knowledge into actual appointments.</li>
+            <li>Plug the holes where money & time leak out of your week.</li>
+          </ul>
+          <p class="card-footer-note">
+            Best if you’re already in the game and want more consistent deals.
+          </p>
+        </div>
+
+        <!-- PM coaching -->
+        <div class="card">
+          <div class="card-label">For PM owners & operators</div>
+          <span class="card-tagline">Best for scaling</span>
+          <h3>Property Management Coaching</h3>
+          <p>
+            For property managers and small operators buried in fires who want doors, owners, and tenants handled
+            with clean systems instead of chaos.
+          </p>
+          <p class="price">From $497 / month · 1:1 coaching</p>
+          <ul class="benefits">
+            <li>Owner onboarding & expectations that stop the micromanaging.</li>
+            <li>Maintenance, collections & communication that run on rails.</li>
+            <li>Use your software & VAs like actual leverage, not duct tape.</li>
+          </ul>
+          <p class="card-footer-note">
+            Best if you have 10–150 doors and want to grow without losing your mind.
+          </p>
+        </div>
+
+        <!-- Investor coaching -->
+        <div class="card">
+          <div class="card-label">For investors</div>
+          <span class="card-tagline">Portfolio builders</span>
+          <h3>Real Estate Investing Coaching</h3>
+          <p>
+            For investors who want to buy better deals, avoid obvious landmines, and build a portfolio that actually
+            cash flows instead of just looking good on paper.
+          </p>
+          <p class="price">From $497 / month · 1:1 coaching</p>
+          <ul class="benefits">
+            <li>Clarify your buy box and stop chasing junk.</li>
+            <li>Run numbers in a way that matches your reality, not theory.</li>
+            <li>Get practical help on operations, not just acquisitions.</li>
+          </ul>
+          <p class="card-footer-note">
+            Best if you already own or are actively trying to buy property.
+          </p>
+        </div>
+
+        <!-- Flip coaching -->
+        <div class="card">
+          <div class="card-label">For flippers & rehabbers</div>
+          <span class="card-tagline">Project-driven</span>
+          <h3>Flip & Rehab Coaching</h3>
+          <p>
+            For flippers, BRRRR investors, and rehab-heavy operators who want predictable, profitable projects
+            instead of blown budgets and surprise delays.
+          </p>
+          <p class="price">From $497 / month · 1:1 coaching</p>
+          <ul class="benefits">
+            <li>Break down deals, scope, budgets & timelines before you swing a hammer.</li>
+            <li>Avoid the classic profit-killers: change orders, scope creep, weak oversight.</li>
+            <li>Structure contractors, subs, and partners so everyone knows the rules.</li>
+          </ul>
+          <p class="card-footer-note">
+            30 years. 2,000–3,000 flips, rehabs & turnarounds. We focus on what keeps your profit alive.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- WHO IT’S FOR -->
+  <section id="who">
+    <div class="container two-col">
+      <div>
+        <h2 class="section-title">Who this coaching is for</h2>
+        <p class="section-subtitle">
+          Whether you’re experienced or starting out, coaching is built around your exact situation.
+        </p>
+
+        <ul class="pill-list">
+          <li>Property managers</li>
+          <li>Flippers</li>
+          <li>BRRRR investors</li>
+          <li>Licensed agents</li>
+          <li>Wholesalers</li>
+          <li>New investors</li>
+          <li>Small operators</li>
+          <li>Landlords</li>
+        </ul>
+
+        <div class="compare-grid">
+          <div class="panel bad">
+            <h3>Not a fit if you want:</h3>
+            <ul>
+              <li>Motivational speeches instead of real systems</li>
+              <li>“Magic lead hacks” instead of consistent work</li>
+              <li>To complain more than you implement</li>
+            </ul>
+          </div>
+
+          <div class="panel good">
+            <h3>Perfect fit if you want:</h3>
+            <ul>
+              <li>A blunt, clear plan for your exact market</li>
+              <li>Practical steps that make you money immediately</li>
+              <li>Help cleaning up the chaos in your business</li>
+              <li>Real accountability and real progress</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <aside class="hero-card">
+        <h3>You get clarity fast</h3>
+        <ul>
+          <li>We break down your systems, cash flow, and bottlenecks.</li>
+          <li>We build weekly structure so the business runs clean.</li>
+          <li>We simplify decisions so you stop spinning in circles.</li>
+        </ul>
+      </aside>
+    </div>
+  </section>
+
+  <!-- FAQ -->
+  <section id="faq">
+    <div class="container">
+      <h2 class="section-title">Frequently asked questions</h2>
+
+      <div class="faq-item">
+        <h3>Do you coach beginners?</h3>
+        <p>Absolutely. Experience helps, but willingness to execute matters more.</p>
+      </div>
+
+      <div class="faq-item">
+        <h3>Is this 1:1 coaching?</h3>
+        <p>Yes. Every session is direct, customized, and practical.</p>
+      </div>
+
+      <div class="faq-item">
+        <h3>What markets do you specialize in?</h3>
+        <p>Mainly Upstate NY, but principles apply anywhere.</p>
+      </div>
+
+      <div class="faq-item">
+        <h3>Do you take on PM companies with fires?</h3>
+        <p>Yes. Systems beat chaos. We fix the foundation first.</p>
+      </div>
+
+    </div>
+  </section>
+
+  <!-- APPLY -->
+  <section id="apply">
+    <div class="container">
+      <div class="lead-form">
+        <h3>Apply for Coaching</h3>
+        <p>Tell me about your business and goals. I’ll reach out privately—your email stays hidden.</p>
+
+        <form>
+          <label>Your Name</label>
+          <input type="text" placeholder="Name" required />
+
+          <label>Your Business</label>
+          <input type="text" placeholder="Company / Role" />
+
+          <label>What type of coaching?</label>
+          <select>
+            <option>Property Management</option>
+            <option>Investing</option>
+            <option>Flipping / BRRRR</option>
+            <option>Real Estate Agent</option>
+          </select>
+
+          <label>Your Message</label>
+          <textarea placeholder="Tell me where you’re stuck and what results you want"></textarea>
+
+          <button class="btn btn-primary" type="submit">Submit Application</button>
+        </form>
+      </div>
+    </div>
+  </section>
+
+  <!-- FINAL CTA -->
+  <section class="final-cta">
+    <div class="container final-cta-inner">
+      <h2 class="final-cta-title">Build a real estate business that actually works.</h2>
+      <p class="final-cta-text">Real experience. Real structure. Real accountability.</p>
+      <a href="#apply" class="btn btn-primary">Apply Now</a>
+    </div>
+  </section>
+</main>
+
+<footer>
+  <p>YourWay Coaching</p>
+  <p>All rights reserved</p>
+</footer>
+
+</body>
+</html>
