--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>YourWay Real Estate Coaching</title>
+<link rel="stylesheet" href="assets/css/style.css">
+</head>
+<body>
+<header class="hero">
+  <div class="hero-content">
+    <h1>Build a Real Estate Business That Prints Confidence and Cash Flow</h1>
+    <p>Whether you’re new or experienced, we build the systems that make real estate predictable, not chaotic.</p>
+    <img src="assets/img/sean-dapper.png" class="hero-photo">
+  </div>
+</header>
+<script src="assets/js/main.js"></script>
+</body>
+</html>
