Add image tag for hero photo in index.html

--- a/index.html
+++ b/index.html
@@ -708,8 +708,8 @@
           <div class="hero-photo">
             <!-- Replace with your actual image path -->
             <!-- Example if you upload sean-dapper.png next to this file: -->
-            <!-- <img src="sean-dapper.png" alt="Sean - YourWay Coaching" /> -->
-            <span>Your photo / brand image can go here (e.g. sean-dapper.png).</span>
+            <img src="sean-dapper.png" alt="Sean - YourWay Coaching" />
+          
           </div>
 
           <div class="hero-tagline">“Real talk. Real systems. No fluff.”</div>
