Revise about section with personal experience details
Updated the about section with detailed personal experience in real estate and property management.

--- a/index.html
+++ b/index.html
@@ -840,9 +840,11 @@
 
             <div class="about-body">
               <p>
-                We focus on clarity first: where you are, what’s broken, and what “good” actually
-                looks like for you in the next 12 months. Then we reverse engineer the systems,
-                scripts, and decisions to get you there.
+                I’ve spent over 25 years in real estate across every corner of the industry: sales, property management, flipping, commercial assets, and long-term investing. I’ve built and sold three management companies that are still operating today, and I continue to run my current firm hands-on.
+
+Over the years I’ve flipped between 2,000 and 3,000 doors both independently and with partners, and my largest negotiation closed at $27 million. I’ve owned or managed every major asset class including single-family, multifamily, mixed-use, retail, office, industrial, hospitality, special-use, and large commercial complexes, with my biggest management responsibility topping $36.5 million.
+
+I’ve also owned and operated restaurants and nightclubs, which teaches you how to keep a business alive in the real world, not just on a spreadsheet. My work in property management and investment strategy has been featured in Great Rochester Real Producers, and I’ve worked with everyone from first-time landlords to out-of-state investors, commercial owners, and operators trying to grow from “a few doors” into a real company.
               </p>
               <p>
                 Every call ends with a short, clear action list. No fluff. No 47-page “homework”
